--- a/css/incrediblepbx.css
+++ b/css/incrediblepbx.css
@@ -78,3 +78,13 @@ body {
 .main .page-header {
   margin-top: 0;
 }
+
+.jumbotron {
+  text-align: center;
+  border-bottom: 1px solid #e5e5e5;
+}
+.jumbotron .btn {
+  padding: 14px 24px;
+  font-size: 21px;
+}
+
